# DeepAlpha

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.brale  LICENSE  Makefile  README-RUST.md  README.md  README.zh.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  run.py  run_tests.py  test_executor.py  test_web_interface.py
alembic/: env.py
alembic/versions/: 001_initial_migration.py
config/: default.yaml  development.yaml
configs/: config.example.toml  config.toml
configs/user_data/: config-proxy.json  freqtrade-config.example.json
deepalpha/: __init__.py  main.py
deepalpha/agents/: __init__.py  base.py  pattern.py  technical.py  trend.py
deepalpha/analysis/: __init__.py  indicators.py
deepalpha/analysis/visual/: __init__.py  chart.py
deepalpha/config/: __init__.py  loader.py  manager.py  models.py  settings.py
deepalpha/core/: __init__.py  di.py  exceptions.py  models.py
deepalpha/db/: __init__.py  connection.py  models.py
deepalpha/db/dao/: __init__.py  base.py  decision_dao.py  order_dao.py
deepalpha/decision/: __init__.py  aggregator.py  analysis_context.py  cache.py  engine.py  multi_agent.py  types.py  validate.py
deepalpha/executor/: __init__.py  core.py  order.py  position.py  risk.py
deepalpha/executor/freqtrade/: client.py  manager_helpers.py  pending.py  price.py  sync.py  tiers_update.py  types.py  webhook.py
deepalpha/gateway/database/: __init__.py  decision_log_store.py  live_positions.py  models.py
deepalpha/gateway/exchanges/: __init__.py  binance.py
deepalpha/gateway/llm/: __init__.py  base.py  factory.py  openai.py
deepalpha/market/: __init__.py  data.py  format.py  order.py  source.py  store.py  stream.py
deepalpha/monitoring/: __init__.py  health.py  logger.py  metrics.py
deepalpha/strategy/: __init__.py  indicators.py  prompt.py
deepalpha/transport/http/: __init__.py  server.py
deepalpha/transport/http/routers/: __init__.py  decisions.py  freqtrade.py  monitoring.py  positions.py  websocket.py
deepalpha/transport/web/static/: index.html
deepalpha/transport/web/static/css/: admin.css  notion.css
deepalpha/transport/web/static/js/: components.js
deepalpha/transport/web/templates/: decision_detail.html  decisions.html  position_detail.html  positions.html
deepalpha/transport/websocket/: __init__.py  manager.py
deepalpha/transport/websocket/handlers/: __init__.py  market_data.py  notifications.py  positions.py
deepalpha/utils/: __init__.py  jsonutil.py  logging.py  sliceutil.py  text.py
docs/: deployment-architecture.md  refactor-plan.md  rust-migration-plan.md  system-architecture.md
docs/improve/cc/: NOFX_技术分析报告.md  StockAgents_融合方案.md  TradingAgents-CN_技术分析报告.md
docs/improve/cc/claude-test/nofx/: NOFX-Python-Refactoring-Plan.md  NOFX_Python_实战部署指南.md  NOFX_Python_重构技术方案_A股港股.md  NOFX_Python_重构技术方案_A股港股_v2.md  NOFX_Python_重构技术方案_A股港股_补充.md  NOFX_Python_重构技术方案_不可言说级实现细节.md  NOFX_Python_重构技术方案_专家级实现细节.md  NOFX_Python_重构技术方案_传说级实现细节.md  NOFX_Python_重构技术方案_大师级实现细节.md  NOFX_Python_重构技术方案_宇宙级实现细节.md  NOFX_Python_重构技术方案_实现细节补充.md  NOFX_Python_重构技术方案_深度补充.md  NOFX_Python_重构技术方案_神话级实现细节.md  NOFX_Python_重构技术方案_终极补充.md  NOFX_Python_重构技术方案_绝对级实现细节.md  NOFX_Python_重构技术方案_至尊级实现细节.md  NOFX_Python_重构技术方案_超脱级实现细节.md  NOFX_Python_重构技术方案_部署运维补充.md  NOFX_Python_重构技术方案_高级实现细节.md
docs/improve/cc/claude-test/shannon/v1/: Shannon项目深度分析报告.md
docs/improve/cc/claude-test/shannon/v2/: FINAL.md  INDEX.md  README.md  Shannon项目分析_执行摘要.md  Shannon项目深度分析报告.md  Shannon项目深度分析报告_v2.md
docs/improve/cc/claude-test/shannon/v2/.claude/: ralph-loop.local.md
docs/improve/codex/: NOFX_技术分析报告.md  TradingAgents-CN_技术分析报告.md
docs/improve/kilo-code/: NOFX-技术分析报告.md  NOFX改造为A港股交易系统技术方案.md  TradingAgents-CN-技术分析报告.md  综合方案-A股港股智能交易系统技术方案.md
docs/modules/: architecture-api.md  architecture-config.md  architecture-database.md  architecture-decision-engine.md  architecture-execution-engine.md  architecture-indicators.md  architecture-market-data.md  architecture-multi-agent.md  architecture-risk-management.md  architecture-websocket.md
freqtrade/user_data/strategies/: brale_shared_strategy.py
migrations/: env.py
migrations/versions/: 001_initial_migration.py
prompts/: agent_indicator.txt  agent_pattern.txt  agent_trend.txt  decision_guideline.txt  default.txt  user_summary.txt
requirements/: base.txt  dev.txt  prod.txt
rust/: Cargo.toml  README.md  build.py  pyproject.toml
rust/benchmarks/: test_performance.py  test_stream_performance.py  test_websocket_performance.py
rust/examples/: executor_examples.py  stream_example.py  websocket_example.py
rust/python/deepalpha_rust/: __init__.py
rust/src/: lib.rs
rust/src/common/: mod.rs
rust/src/executor/: gateway.rs  mod.rs  order.rs  portfolio.rs  position.rs  risk.rs
rust/src/indicators/: basic.rs  mod.rs  momentum.rs  tests.rs  trend.rs  volatility.rs
rust/src/stream/: aggregator.rs  buffer.rs  mod.rs  processor.rs  validator.rs
rust/src/websocket/: auth.rs  connection.rs  message.rs  mod.rs
rust/tests/: test_executor.py  test_executor_performance.py  test_indicators.py  test_stream.py  test_websocket.py
scripts/: freqtrade_webhook_test.sh  install_rust.sh  migrate.py  quickstart.sh  seed_mock_data.py  test_agents.py  test_decision_engine.py  test_market.py  test_ws_proxy.py
tests/: conftest.py
tests/test_executor/: test_execution_engine.py  test_order_manager.py  test_position_manager.py  test_risk_manager.py
tests/test_integration/: test_execution_flow.py
tests/test_performance/: __init__.py  test_benchmarks.py  test_profiling.py
