[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "deepalpha-rust"
description = "Rust performance modules for DeepAlpha"
readme = "README-RUST.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DeepAlpha Team", email = "team@deepalpha.com"},
]
keywords = ["trading", "quantitative", "rust", "performance", "fintech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/zcxGGmu/DeepAlpha"
Documentation = "https://github.com/zcxGGmu/DeepAlpha/docs"
Repository = "https://github.com/zcxGGmu/DeepAlpha.git"

[tool.maturin]
python-source = "python"
module-name = "deepalpha_rust._core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"